@@ -1,5 +1,5 @@
 Source: openssl
-Build-Depends: debhelper (>= 9), m4, bc, dpkg-dev (>= 1.15.7)
+Build-Depends: debhelper (>= 10), m4, bc, dpkg-dev (>= 1.15.7)
 Section: utils
 Priority: optional
 Maintainer: Debian OpenSSL Team <pkg-openssl-devel@lists.alioth.debian.org>
@@ -92,16 +92,3 @@ Description: Secure Sockets Layer toolkit - development documentation
  Internet.
  .
  It contains manpages and demo files for libssl and libcrypto.
-
-Package: libssl1.1-dbg
-Section: debug
-Priority: extra
-Architecture: any
-Multi-Arch: same
-Depends: libssl1.1 (= ${binary:Version}), ${misc:Depends}
-Description: Secure Sockets Layer toolkit - debug information
- This package is part of the OpenSSL project's implementation of the SSL
- and TLS cryptographic protocols for secure communication over the
- Internet.
- .
- It contains debugging symbols for libssl and libcrypto.
