@@ -3,4 +3,5 @@ usr/lib/*/libcrypto.so
 usr/lib/*/libssl.a
 usr/lib/*/libcrypto.a
 usr/lib/*/pkgconfig
-usr/include
+usr/include/openssl/*
+usr/include/*/openssl
