@@ -1,3 +1,0 @@
-usr/lib/*/*.so.*.*
-usr/lib/*/*/*.so.*.*
-usr/lib/*/engines-*
