@@ -5,3 +5,4 @@ README.ECC
 README.ENGINE
 NEWS
 FAQ
+debian/README.optimization
