@@ -1,9 +1,0 @@
-usr/share/man/man1
-usr/share/man/man5
-usr/share/man/man7
-usr/bin
-usr/lib/ssl/misc
-usr/lib/ssl/certs
-usr/lib/ssl/openssl.cnf
-usr/lib/ssl/private
-etc/ssl
